@@ -3,6 +3,8 @@ v1.?   Rafal Mantiuk  <mantiuk@mpi-inf.mpg.de>
 	* Fixed: spurious zeros in the fan filters (thanks to Kenichiro Masaoka)
 	
 	* Fixed: frequency misalignment bug (thanks to Kenichiro Masaoka)
+
+	* Added: support for multithreaded FFTW (though could not observe any speed up)
 	
 v1.7   Rafal Mantiuk  <mantiuk@mpi-inf.mpg.de>
 	
